--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
-
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=list" />
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Media/Mediaquery.css">
+    <title>Document</title>
+
 
 </head>
 
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">list</span>
@@ -48,11 +49,22 @@
         </article>
     </main>
     <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 769) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
+
+
         function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
-                } else {
-                    itens.style.display = 'block'
+            } else {
+                itens.style.display = 'block'
             }
         }
     </script>
